--- a/css/address.scss
+++ b/css/address.scss
@@ -118,7 +118,7 @@ $telFontSize:36px;
                 font-weight: bold;
                 margin-left: 24px;
             }
-            >form {
+            >div {
                 >div {
                     margin-top: 10px;
                     overflow: hidden;
@@ -171,10 +171,14 @@ $telFontSize:36px;
                     background-color: $activeBgColor;
                     margin: 24px 0 0 21px;
                     cursor: pointer;
+                    &:disabled{
+                        opacity: 0.5;
+                    }
                 }
             }
         }
         .addrs {
+            padding-bottom: 20px;
             >li {
                 border: 1px solid #E5E5E5;
                 width: 937px;
