--- a/css/index.scss
+++ b/css/index.scss
@@ -155,7 +155,8 @@ $telFontSize:36px;
                     width: 100%;
                 }
                 img {
-                    width: 100%;
+                    width: 291px;
+                    height: 196px;
                     margin: 0 auto;
                     display: block;
                 }
