--- a/css/login.css
+++ b/css/login.css
@@ -108,7 +108,8 @@
 }
 
 #middle .main > form .yicon > span:first-of-type img {
-  width: 100%;
+  width: 126px;
+  height: 54px;
 }
 
 #middle .main > form .yicon > span:last-of-type {
