--- a/css/login.scss
+++ b/css/login.scss
@@ -108,7 +108,8 @@ $telFontSize:36px;
                     height: 54px;
                     margin: 0 13px;
                     img {
-                        width: 100%;
+                        width: 126px;
+                        height: 54px;
                     }
                 }
                 >span:last-of-type {
