--- a/css/register.scss
+++ b/css/register.scss
@@ -56,7 +56,7 @@ $telFontSize:36px;
                     line-height: 38px;
                     font-size: $navClassifyLiAndproSpanAndDlAndTimeFontSize;
                     color: $activeBgColor;
-                    width: 73px;
+                    width: 105px;
                     margin-right: 10px;
                 }
                 >input {
@@ -93,7 +93,8 @@ $telFontSize:36px;
                     height: 38px;
                     margin: 0 19px;
                     img {
-                        width: 100%;
+                        width: 87px;
+                        height: 38px;
                     }
                 }
                 >span:last-of-type {
@@ -141,7 +142,7 @@ $telFontSize:36px;
             >input {
                 width: 391px;
                 height: 54px;
-                margin: 0 0 45px 27.5px;
+                margin: 0 0 45px 52.5px;
                 color: #fff;
                 font-size: $navAndTitleAndSearchFontSize;
                 background-color: $activeBgColor;
