--- a/css/confirm_order.scss
+++ b/css/confirm_order.scss
@@ -133,6 +133,7 @@
                             float: right;
                             font-size: $navClassifyLiAndproSpanAndDlAndTimeFontSize;
                             color: #010101;
+                            cursor: pointer;
                         }
                     }
                     .site_list {
@@ -393,7 +394,6 @@
                                     }
                                 }
                                 >form {
-                                    margin-top: 25px;
                                     >textarea {
                                         margin-left: 5px;
                                         vertical-align: top;
@@ -484,6 +484,9 @@
                     text-align: center;
                     font-weight: bold;
                     cursor: pointer;
+                    &:disabled{
+                        opacity: 0.5;
+                    }
                 }
             }
         }
