--- a/css/order_details.css
+++ b/css/order_details.css
@@ -62,6 +62,11 @@ html {
   position: relative;
   float: left;
   min-width: 90px;
+  opacity: 0.3;
+}
+
+#middle .containe .order_status > div:last-of-type ul li.done {
+  opacity: 1;
 }
 
 #middle .containe .order_status > div:last-of-type ul li > i {
@@ -84,6 +89,7 @@ html {
 
 #middle .containe .order_status > div:last-of-type ul li .date {
   top: 19px;
+  width: 78px;
 }
 
 #middle .containe .order_status > div:last-of-type ul li .time {
