--- a/css/comment.scss
+++ b/css/comment.scss
@@ -197,7 +197,7 @@ $telFontSize:36px;
             color: $topAndNavColor;
             font-size: $navClassifyLiAndproSpanAndDlAndTimeFontSize;
             margin-bottom: 33px;
-            >form {
+            >div {
                 overflow: hidden;
                 label {
                     span {
