--- a/css/public.css
+++ b/css/public.css
@@ -500,7 +500,7 @@ li {
 #footer {
   background-color: #000;
   width: 100%;
-  height: 155px;
+  /* height: 155px; */
 }
 
 #footer .footer_head {
@@ -548,7 +548,7 @@ li {
 
 #footer .footer_main {
   overflow: hidden;
-  height: 190px;
+  height: 230px;
 }
 
 #footer .footer_main dt,
