--- a/css/public.scss
+++ b/css/public.scss
@@ -472,7 +472,7 @@ li {
 #footer {
     background-color: #000;
     width: 100%;
-    height: 155px;
+    // height: 155px;
     .footer_head {
         @extend .containe;
         height: 72px;
@@ -513,7 +513,7 @@ li {
     .footer_main {
         @extend .containe;
         overflow: hidden;
-        height: 190px;
+        height: 230px;
         dt,
         a,
         span,
